bug fixing shadow overflow

--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -7,8 +7,9 @@
   width: 100%;
   min-height: 700px;
   color: white;
-  margin: 0 auto;
   overflow: hidden;
+  position: relative;
+  margin: 0;
 }
 
 .shadow-purple {
